client/main.css
body {
  font-family: sans-serif;
}

*{
	font-family: 'Rajdhani', sans-serif;
}

.Header{
	font-size: 60px;
	text-align: center;
	margin-bottom: 0;
}

.SubHeader{
	font-size: 50px;
	text-align: center;
	margin-top: 0;
}

.Header--lessMargin{
	margin-bottom: 5px;
}

.BeginnerInput{
	margin: auto;
  	display: block;
	width: 250px;
	height: 30px;
	font-size: 16px;
	text-align: center;
}

.BeginnerButton{
	margin: auto;
  	display: block;
	width: 250px;
	height: 30px;
	font-size: 16px;
	text-align: center;
}

.NewRoomButton{
	width: 150px;
	padding-right: 10px;
}

.ButtonWithBottomMargin{
	margin-bottom: 30px;
}

.RoomJoiners{
	width: 320px;
	margin: 0 auto;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}

.JoinForm{
	width: 150px;
	display: flex;
	flex-direction: row;
}

.JoinInput{
	height: 24px;
	width: 100px;
}

.JoinButton{
	width:50px;
}

.NameNote{
	text-align: center;
}

.WaitingInfo{
	text-align: center;
}

.User{
	font-family: 'Arial';
	margin: 10px auto;
	padding-top: 8px;
	padding-left: 10px;
	font-size: 18px;
	background-color: #F5F5F5;
	width: 320px;
	height: 28px;
	text-align: left;
}

.StartRoomButton{
	margin-bottom: 40px;
}

.PhaseTitle{
	text-align: center;
}

.PlayTimeInfo{
	text-align: center;
}

.NightInput{
	margin: auto;
  	display: block;
	width: 250px;
	height: 30px;
	font-size: 16px;
	text-align: center;
}

.NightButton{
	margin: auto;
  	display: block;
	width: 250px;
	height: 30px;
	font-size: 16px;
	text-align: center;
}

.RoleList{
	font-family: 'Arial';
	margin: 10px auto;
	padding-top: 8px;
	font-size: 14px;
	background-color: #F5F5F5;
	width: 175px;
	height: 22px;
	text-align: center;
	list-style-type: none;
	padding-left: 0px;
}

.RoleListHolder{
	padding-left: 0px;
}

.ResultsList{
	font-family: 'Arial';
	padding: 8px 5px 7px 5px;
	margin: 10px auto;
	font-size: 14px;
	background-color: #F5F5F5;
	width: 300px;
	text-align: center;
	list-style-type: none;
}

